# finance-tool-suite

./: LICENSE.txt  README.md  gemini.md
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/routes/: auth.py  goals.py  leads.py
docs/: 01-product-requirements.md  02-architecture-and-structure.md  03-data-models.md  04-database-schema.md  05-fintech-calculators-spec.md  srs_and_estimation.md
frontend/: GEMINI.md  package-lock.json
frontend/app/(tabs)/: _layout.tsx  index.tsx  tasks.tsx
frontend/app/calculators/: sip.tsx
frontend/components/: AppButton.tsx  AppCard.tsx  AppTextInput.tsx
frontend/constants/: Colors.ts  Theme.ts
frontend/utils/: math.ts
